<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Around Me</string>
    <string name="btSpeak">Speak</string>
    <string name="description_logo">Yelp</string>
    <string name="description_about">About</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_feature1">Theatre</string>
    <string name="description_feature2">Restaurant</string>
    <string name="description_feature3">Hospital</string>
    <string name="description_feature4">ATM</string>
    <string name="description_feature5">Gas Station</string>
    <string name="description_feature6">Airport</string>
    <string name="description_feature7">Cafe</string>
    <string name="description_feature8">Grocery</string>
    <string name="description_feature9">Gaming Centre</string>
    <string name="description_feature10">Library</string>
    <string name="description_feature11">Hotel</string>
    <string name="description_feature12">Taxi</string>
    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_feature1">Theatre</string>
    <string name="title_feature2">Restaurant</string>
    <string name="title_feature3">Hospital</string>
    <string name="title_feature4">ATM</string>
    <string name="title_feature5">Gas Station</string>
    <string name="title_feature6">Airport</string>
    <string name="title_feature7">Cafe</string>
    <string name="title_feature8">Grocery</string>
    <string name="title_feature9">Bowling</string>
    <string name="title_feature10">Library</string>
    <string name="title_feature11">Hotel</string>
    <string name="title_feature12">Taxi</string>
    <string name="default_intro">This is the default content view for an activity. Be sure to change your activity\'s onCreate method. Use setContentView on a custom layout.</string>
    <string name="feature1_intro">Search Theatre near you</string>
    <string name="feature2_intro">Search Restaurants near you</string>
    <string name="feature3_intro">Search Hospitals near you</string>
    <string name="feature4_intro">Search for ATM near you</string>
    <string name="feature5_intro">Search for Gas Station</string>
    <string name="feature6_intro">Search for nearest airport</string>
    <string name="feature7_intro">Search for nearest cafe</string>
    <string name="feature8_intro">Search for nearest grocery</string>
    <string name="feature9_intro">Search for nearest bowling</string>
    <string name="feature10_intro">Search for nearest library</string>
    <string name="feature11_intro">Search for nearest hotel</string>
    <string name="feature12_intro">Search for nearest taxi</string>
    <string name="about_intro">Welcome to the Around Me App</string>
    <string name="search_intro">Search</string>

</resources>